2005-11-15  Kevin P. Fleming  <kpfleming@limerick.digium.com>

	* doc/README.backtrace: add note about properly building Asterisk to be able to produce backtraces; wrap text and remove DOS line endings

	* channels/chan_sip.c (add_codec_to_sdp): add 'annexb=no' to G.729A SDP (issue #5539)

	* channels/chan_alsa.c (alsa_hangup): handle autohangup properly (issue #5672)

	* channels/chan_misdn.c (and other files): various fixes (issue #5739)

	* channels/chan_sip.c (handle_request_info): properly forward 'flash' events received via SIP INFO (issue #5751, different patch)

	* apps/app_disa.c (disa_exec): don't duplicate constant strings when not needed

	* apps/app_playback.c (playback_exec): use correct logic tests for options (issue #5752)

	* apps/app_disa.c (disa_exec): use standard arg parsing routines (issue #5736)

2005-11-15  Russell Bryant <russell@digium.com>

	* manager.c: Don't crash on a SetVar action if the channel name is not set, or variable's value is not set (issue #5760)

	* doc/README.variables: Add application exit status variables

2005-11-14  Josh Roberson <josh@asteirasgi.com>
	
	* manager.c: Fix crash on variable passing from AMI originate (issue #5737)

2005-11-14  Russell Bryant  <russell@digium.com>

	* many files: Merge doxygen documentation updates. (issue #5605)

	* apps/app_dial.c: Fix typo in RetryDial description.

2005-11-12  Russell Bryant  <russell@digium.com>

	* channels/chan_oss.c: Fix a typo in an error message.

2005-11-11  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-rc2 released.
	
2005-11-11  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_sip.c (thread_safe_rand): ensure that threads don't get the same random number (issue #5712)

	* apps/app_voicemail.c (forward_message): correct bugs in message forwarding (issue #5718)
	(copy_message): use correct path for locking (issue #5704)

	* apps/app_dial.c (wait_for_answer): correct flag copying for automon feature (issue #5720)
